ilab-20180511: implement the record ui and a part of controller code

--- a/src/ilab_pro/WebRoot/static/css/equipment/request_buy_equipment.css
+++ b/src/ilab_pro/WebRoot/static/css/equipment/request_buy_equipment.css
@@ -55,3 +55,24 @@
 .btn-commit {
   margin-left: 30px;
 }
+
+.delete-img {
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+}
+
+.buy-equipment-table {
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 50px;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.alert {
+  width: 80%;
+  margin: 0 auto;
+}
